学习示例文件

--- a/vue_01/index08.html
+++ b/vue_01/index08.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<meta charset="utf-8">
-		<title>>练习8-VUE组件基础</title>
+		<title>练习8-VUE组件基础</title>
 		<script src="js/vue.js" type="text/javascript" charset="utf-8"></script>
 	</head>
 	<body>
