vue router 相关示例代码及思维导图

--- a/vue_01/index06.html
+++ b/vue_01/index06.html
@@ -11,6 +11,7 @@
 			<p><a v-bind:[href]="url"> 动态参数的使用 </a></p>
 			<div v-on:click="click1">
 				<div v-on:click.stop="click2"> 修饰符 stop 禁止事件往上冒泡 </div>
+				<input v-model="" />
 			</div>
 		</div>
 		
